remove java5 dependency (Number.valueOf) introduced with the fix of GEOT-1515
git-svn-id: https://svn.osgeo.org/geotools/geotools/trunk@27502 e5c1c795-43da-0310-a71f-fac65c449510